--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Create a wheel for the python files
         run: |
           cd analyze-tblgen
-          python3 -m build
+          python -m build
       - name: Put the wheel in the notebook files
         run: |
           cp analyze-tblgen/dist/*.whl website_notebook/files/
