Add build dependency

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
           python -m pip install -r website_notebook/requirements.txt
           python -m pip install wheel
           python -m pip install setuptools
+          python -m pip install build
       - name: Create a wheel for the python files
         run: |
           cd analyze-tblgen
