--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ bqplot
 ipyleaflet
 ipywidgets>=7.6
 jupyterlab_miami_nights
-jupyterlab~=3.1.0
+jupyterlab>=3.6.8
 jupyterlite==0.1.0a14
 jupyterlite-p5-kernel==0.1.0a12
